--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
 }
 .section-bg-1 {
   position: relative;
-  min-height: 563px;
+  height: 100vh;
   overflow: hidden;
 }
 .section-padding {
@@ -73,4 +73,16 @@ h2.section-title {
 }
 .styled-faq {
   min-height: 476px;
+}
+@media screen and (max-width: 768px) {
+  .section-bg-1::after {
+    width: 100%;
+  }
+  .section-padding {
+    padding: 30px 0;
+  }
+  h2.section-title {
+    font-size: 28px;
+    margin-bottom: 0.5rem;
+  }
 }
