--- a/css/style.css
+++ b/css/style.css
@@ -74,15 +74,29 @@ h2.section-title {
 .styled-faq {
   min-height: 476px;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 774px) {
   .section-bg-1::after {
     width: 100%;
+    opacity: 0.1 !important;
   }
   .section-padding {
     padding: 30px 0;
+    text-align: center;
   }
   h2.section-title {
     font-size: 28px;
     margin-bottom: 0.5rem;
   }
 }
+/* @media screen and (max-width: 576px) {
+  .section-bg-1::after {
+    width: 100%;
+  }
+  .section-padding {
+    padding: 20px 0;
+  }
+  h2.section-title {
+    font-size: 24px;
+    margin-bottom: 0.5rem;
+  }
+} */
