--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body {
   left: 0;
   width: 45%;
   height: 100%;
-  background-color: #ddd;
+  /* background-color: #ddd; */
   z-index: -1;
 }
 h2.section-title {
@@ -77,13 +77,12 @@ h2.section-title {
 @media screen and (max-width: 774px) {
   .section-bg-1::after {
     width: 100%;
-    opacity: 0.5 !important;
+    background-color: #000000;
   }
   h2.section-title {
     font-size: 28px;
     margin-bottom: 0.5rem;
     text-align: center;
-    color: white;
   }
   .section-padding {
     padding: 30px 0;
@@ -93,15 +92,3 @@ h2.section-title {
     text-align: center;
   }
 }
-/* @media screen and (max-width: 576px) {
-  .section-bg-1::after {
-    width: 100%;
-  }
-  .section-padding {
-    padding: 20px 0;
-  }
-  h2.section-title {
-    font-size: 24px;
-    margin-bottom: 0.5rem;
-  }
-} */
